--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
